Fix contrast errors
Fix contrast errors on both hero and quick links. Removed ::before because WAVE Webaim sometimes ignores pseudo elements.

--- a/assets/css/components/hero.css
+++ b/assets/css/components/hero.css
@@ -4,18 +4,11 @@
     position: relative;
     width: 100%;
     height: 267px;
-    background-image: url("../../img/hero.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/hero.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
     align-items: center;
-}
-
-.hero::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.5)
 }
 
 /* Content */
@@ -26,7 +19,6 @@
     font-family: var(--secondary-font);
     font-size: 1.125rem;
     color: var(--secondary-text);
-    z-index: 1;
 }
 
 .hero__content h1 {
@@ -63,6 +55,6 @@
 
 @media (min-width: 1440px) {
     .hero {
-        background-position: center -100px;
+        background-position: center, center -100px;
     }
 }
