--- a/assets/css/components/quick_links.css
+++ b/assets/css/components/quick_links.css
@@ -22,32 +22,24 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25)
 }
 
-.quick__item img,
-.quick__item::before {
-    border-radius: 5px;
-}
-
 .quick__item img {
     display: block;
     width: 100%;
     height: auto;
-}
-
-.quick__item a::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 .quick__item h2 {
     position: absolute;
-    bottom: 3px;
-    left: 16px;
+    bottom: 0;
+    left: 0;
+    padding: 0 16px;
+    width: 100%;
     font-family: var(--primary-font);
     font-size: 1.625rem;
     font-weight: 700;
     color: var(--secondary-text);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 /* Responsive breakpoints */
